--- a/Analysis_Sentiment_SC_Gemini.ipynb
+++ b/Analysis_Sentiment_SC_Gemini.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "15AojaEw9sNc7blNKiOxE5bfqO67DGKk-",
+      "authorship_tag": "ABX9TyMygzyMrWBfhivUPgMbI0/C",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Syamabbas/Google-Collab/blob/main/Analysis_Sentiment_SC_Gemini.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
