--- a/Auto_Labeling.ipynb
+++ b/Auto_Labeling.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "OVBLBFE3ww6a"
       },
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "vp8AYJsisTrr"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,102 +97,157 @@
       "metadata": {
         "id": "Hs2ODi8wsflq"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "typo_dict = {\n",
-        "    \"cepet\": \"cepat\",\n",
-        "    \"celat\": \"cepat\",\n",
-        "    \"cpt\": \"cepat\",\n",
-        "    \"bgus\": \"bagus\",\n",
-        "    \"bgs\": \"bagus\",\n",
-        "    \"mantul\": \"mantap\",\n",
-        "    \"ontime\": \"on time\",\n",
-        "    \"nganter\":\"mengantar\",\n",
+        "# Waktu & Pengiriman\n",
+        "    \"telattt\": \"telat\",\n",
+        "    \"telatt\": \"telat\",\n",
+        "    \"terlat\": \"terlambat\",\n",
+        "    \"terlmbt\": \"terlambat\",\n",
+        "    \"ngaret\": \"terlambat\",\n",
+        "    \"nungguin\": \"menunggu\",\n",
+        "    \"nungguu\": \"menunggu\",\n",
+        "    \"nunggu banget\": \"menunggu banget\",\n",
+        "    \"kelamaan\": \"lama\",\n",
+        "    \"lamanyaa\": \"lama\",\n",
         "\n",
-        "    \"ga\": \"tidak\",\n",
-        "    \"gak\": \"tidak\",\n",
-        "    \"gk\": \"tidak\",\n",
-        "    \"nggak\": \"tidak\",\n",
-        "    \"tdk\": \"tidak\",\n",
-        "    \"ndak\": \"tidak\",\n",
-        "    \"ngga\":\"tidak\",\n",
-        "    \"ngak\":\"tidak\",\n",
-        "    \"ngga\":\"tidak\",\n",
+        "    # Sampai / Kirim\n",
+        "    \"sampee\": \"sampai\",\n",
+        "    \"sampeee\": \"sampai\",\n",
+        "    \"smpee\": \"sampai\",\n",
+        "    \"nyamppe\": \"sampai\",\n",
+        "    \"nyampeee\": \"sampai\",\n",
+        "    \"blm nyampe\": \"belum sampai\",\n",
+        "    \"blom\": \"belum\",\n",
+        "    \"blom sampai\": \"belum sampai\",\n",
+        "    \"gk nyampe\": \"tidak sampai\",\n",
+        "    \"ga nyampe\": \"tidak sampai\",\n",
+        "    \"belom\": \"belum\",\n",
         "\n",
-        "    \"jgn\":\"jangan\",\n",
-        "    \"bagua\":\"bagus\",\n",
+        "    # Respon / CS / Admin\n",
+        "    \"responn\": \"respon\",\n",
+        "    \"slowresp\": \"slow respon\",\n",
+        "    \"fastresp\": \"fast respon\",\n",
+        "    \"gak respon\": \"tidak respon\",\n",
+        "    \"ga respon\": \"tidak respon\",\n",
+        "    \"slow respon banget\": \"slow respon\",\n",
+        "    \"bales lama\": \"slow respon\",\n",
+        "    \"dibales lama\": \"slow respon\",\n",
+        "    \"chat ga dibales\": \"tidak dibalas\",\n",
+        "    \"chat gak dibales\": \"tidak dibalas\",\n",
+        "    \"cs lemot\": \"slow respon\",\n",
+        "    \"admin lemot\": \"slow respon\",\n",
         "\n",
-        "    \"sdh\": \"sudah\",\n",
-        "    \"udh\": \"sudah\",\n",
-        "    \"ud\": \"sudah\",\n",
-        "    \"blm\": \"belum\",\n",
+        "    # Bagus / Positif\n",
+        "    \"baguuus\": \"bagus\",\n",
+        "    \"baguuuss\": \"bagus\",\n",
+        "    \"mantaaaap\": \"mantap\",\n",
+        "    \"mantappp\": \"mantap\",\n",
+        "    \"mantab\": \"mantap\",\n",
+        "    \"mantep\": \"mantap\",\n",
+        "    \"mantepp\": \"mantap\",\n",
+        "    \"mantul banget\": \"mantap\",\n",
+        "    \"keren\": \"bagus\",\n",
+        "    \"kereen\": \"bagus\",\n",
+        "    \"kereenn\": \"bagus\",\n",
+        "    \"the bestt\": \"the best\",\n",
+        "    \"recommendedd\": \"recommended\",\n",
+        "    \"rekomen banget\": \"recommended\",\n",
         "\n",
-        "    \"bgt\": \"banget\",\n",
-        "    \"bngt\": \"banget\",\n",
+        "    # Negatif / Emosi\n",
+        "    \"paraaaah\": \"parah\",\n",
+        "    \"parahhh\": \"parah\",\n",
+        "    \"payaaaah\": \"payah\",\n",
+        "    \"kesel banget\": \"kesal\",\n",
+        "    \"nyebelin\": \"menyebalkan\",\n",
+        "    \"nyesel banget\": \"menyesal\",\n",
+        "    \"kapokkk\": \"kapok\",\n",
+        "    \"kapoook\": \"kapok\",\n",
+        "    \"bad banget\": \"buruk\",\n",
+        "    \"jelekkk\": \"jelek\",\n",
+        "    \"jelek banget\": \"jelek\",\n",
         "\n",
-        "    \"brg\": \"barang\",\n",
-        "    \"dtg\": \"datang\",\n",
-        "    \"smpe\": \"sampai\",\n",
-        "    \"sampe\": \"sampai\",\n",
-        "    \"smpai\": \"sampai\",\n",
-        "    \"samp\": \"sampai\",\n",
-        "    \"nyampe\":\"sampai\",\n",
-        "    \"nyampai\":\"sampai\",\n",
-        "    \"nyampe2\":\"sampai\",\n",
-        "    \"di kirim\":\"dikirim\",\n",
+        "    # Rusak / Barang\n",
+        "    \"rusakkk\": \"rusak\",\n",
+        "    \"rusakk\": \"rusak\",\n",
+        "    \"hancurrr\": \"hancur\",\n",
+        "    \"hancurr\": \"hancur\",\n",
+        "    \"pecahh\": \"pecah\",\n",
+        "    \"pecahhh\": \"pecah\",\n",
+        "    \"remuk\": \"rusak\",\n",
+        "    \"kardus ancur\": \"kardus rusak\",\n",
         "\n",
-        "    \"dr\": \"dari\",\n",
-        "    \"dri\": \"dari\",\n",
-        "    \"yg\":\"yang\",\n",
-        "    \"dgn\":\"dengan\",\n",
-        "    \"lbh\":\"lebih\",\n",
-        "    \"bnyak\":\"banyak\",\n",
-        "    \"bny\":\"banyak\",\n",
-        "    \"gnti\":\"ganti\",\n",
+        "    # Hilang / Nyasar\n",
+        "    \"ilang\": \"hilang\",\n",
+        "    \"ilanggg\": \"hilang\",\n",
+        "    \"nyasarr\": \"nyasar\",\n",
+        "    \"nyasarrr\": \"nyasar\",\n",
+        "    \"paket ilang\": \"paket hilang\",\n",
+        "    \"barang ilang\": \"barang hilang\",\n",
         "\n",
-        "    \"anying\":\"anjing\",\n",
-        "    \"ajg\":\"anjing\",\n",
-        "    \"anjg\":\"anjing\",\n",
-        "    \"anjir\":\"anjing\",\n",
-        "    \"anjingg\":\"anjing\",\n",
+        "    # Harga / Ongkir\n",
+        "    \"mahal bgt\": \"mahal banget\",\n",
+        "    \"murah bgt\": \"murah banget\",\n",
+        "    \"ongkirnya mahal\": \"ongkir mahal\",\n",
+        "    \"ongkirnya murah\": \"ongkir murah\",\n",
+        "    \"kemahalan\": \"mahal\",\n",
+        "    \"kemurahan\": \"murah\",\n",
         "\n",
-        "    \"jg\": \"juga\",\n",
-        "    \"krn\": \"karena\",\n",
-        "    \"knp\": \"kenapa\",\n",
-        "    \"kpd\": \"kepada\",\n",
-        "    \"kpn\": \"kapan\",\n",
+        "    # Kurir / Driver\n",
+        "    \"kurir galak banget\": \"kurir galak\",\n",
+        "    \"driver galak\": \"kurir galak\",\n",
+        "    \"kurir jutek banget\": \"kurir jutek\",\n",
+        "    \"abang kurir\": \"kurir\",\n",
+        "    \"pak kurir\": \"kurir\",\n",
         "\n",
-        "    \"terimakasih\":\"terima kasih\",\n",
-        "    \"terimakasih sudah\":\"terima kasih\",\n",
-        "    \"trimakasih\": \"terima kasih\",\n",
-        "    \"makasih\": \"terima kasih\",\n",
-        "    \"makasih sudah\": \"terima kasih\",\n",
-        "    \"mmg\": \"memang\",\n",
+        "    # Profanity / Kasar\n",
+        "    \"anj\": \"anjing\",\n",
+        "    \"anjayy\": \"anjing\",\n",
+        "    \"anjay\": \"anjing\",\n",
+        "    \"bangke\": \"bangsat\",\n",
+        "    \"bangkee\": \"bangsat\",\n",
+        "    \"kampret\": \"kasar\",\n",
+        "    \"brengsek\": \"buruk\",\n",
+        "    \"tai banget\": \"tai\",\n",
         "\n",
-        "    \"telp\": \"telepon\",\n",
-        "    \"tlp\": \"telepon\",\n",
-        "    \"telfon\": \"telepon\",\n",
-        "    \"telpon\": \"telepon\",\n",
-        "    \"telpun\":\"telepon\",\n",
-        "    \"hubungin\":\"hubungi\",\n",
+        "    # Sistem / Aplikasi\n",
+        "    \"aplikasinya error\": \"aplikasi error\",\n",
+        "    \"apps error\": \"aplikasi error\",\n",
+        "    \"web error\": \"website error\",\n",
+        "    \"tracking error\": \"tracking bermasalah\",\n",
+        "    \"resi ga ketemu\": \"resi tidak ditemukan\",\n",
+        "    \"resi gak muncul\": \"resi tidak ditemukan\",\n",
+        "    \"status ga update\": \"status tidak update\",\n",
         "\n",
-        "    \"drivernya\": \"driver\",\n",
-        "    \"kurirnya\": \"kurir\",\n",
-        "    \"csnya\": \"cs\",\n",
+        "    # Lokasi / Tempat\n",
+        "    \"lokasii\": \"lokasi\",\n",
+        "    \"lokasii\": \"lokasi\",\n",
+        "    \"lokasinyaa\": \"lokasi\",\n",
+        "    \"tempatnya bersih\": \"tempat bersih\",\n",
+        "    \"tempatnya nyaman\": \"tempat nyaman\",\n",
         "\n",
-        "    \"tgl\":\"tanggal\",\n",
-        "    \"tggl\":\"tanggal\",\n",
+        "    # Rating / Review\n",
+        "    \"bintang 1\": \"bintang satu\",\n",
+        "    \"bintang1\": \"bintang satu\",\n",
+        "    \"rate jelek\": \"rating buruk\",\n",
+        "    \"review jelek\": \"review buruk\",\n",
+        "    \"komen jelek\": \"komentar buruk\",\n",
         "\n",
-        "    \"tlong\":\"tolong\",\n",
-        "    \"layanannya\":\"layanan\",\n",
-        "    \"layananya\":\"layanan\",\n",
-        "    \"murahh\":\"murah\"\n",
+        "    # Lain-lain\n",
+        "    \"makasiii\": \"terima kasih\",\n",
+        "    \"makasihh\": \"terima kasih\",\n",
+        "    \"thx\": \"terima kasih\",\n",
+        "    \"thanks\": \"terima kasih\",\n",
+        "    \"okeee\": \"oke\",\n",
+        "    \"okee\": \"oke\",\n",
+        "    \"sippp\": \"sip\",\n",
+        "    \"sipppp\": \"sip\"\n",
         "}\n",
-        "\n",
         "\n",
         "patterns = {\n",
         "    r'(\\d+)\\s*hri': r'\\1 hari',\n",
@@ -203,7 +258,7 @@
       "metadata": {
         "id": "Z22rOvEBFdTH"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +285,7 @@
       "metadata": {
         "id": "VoUwLYo4xKCT"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +298,7 @@
       "metadata": {
         "id": "U1lEeqMnOWzy"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +329,7 @@
         "]\n",
         "\n",
         "negative_words = [\n",
-        "    \"abal-abal\",\"alamat tidak ditemukan\",\"amburadul\",\n",
+        "    \"abal-abal\",\"alamat tidak ditemukan\",\"amburadul\",\"tidak konsisten\",\n",
         "    \"aplikasi tidak update\",\"asal\",\"asu\",\"asuu\",\"bagong\",\n",
         "    \"belum\",\"belum sampai\",\"berkurang\",\"bikin emosi\",\"bikin nyesel\",\n",
         "    \"bocor\",\"bosok\",\"buruk\",\"capek\",\"cuek\",\"cerewet\",\"crewet\",\n",
@@ -313,7 +368,7 @@
       "metadata": {
         "id": "WVoeqHf_xIJg"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +396,7 @@
       "metadata": {
         "id": "eKIr8FJkxhJM"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +416,7 @@
         "id": "VeSvELyOz9U0",
         "outputId": "59f3fc93-2dc0-4cb4-8996-62b4c1bfa938"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +623,7 @@
       "metadata": {
         "id": "Q5L4_h_D0FxH"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +644,7 @@
       "metadata": {
         "id": "4Udh-pek0Ia_"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,7 +657,7 @@
       "metadata": {
         "id": "J6bzDT5C0U3T"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +668,7 @@
       "metadata": {
         "id": "Amlds11h0X4b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +680,7 @@
       "metadata": {
         "id": "vzNgnhKG0e2H"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     }
   ]
